--- a/bicy_stat/templates/bicy_stat/stat_all.html
+++ b/bicy_stat/templates/bicy_stat/stat_all.html
@@ -18,11 +18,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">홈<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'bicy_stat:stats_index' %}">통계</a>
+                    <a class="nav-link" href="{% url 'home' %}">홈</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'bicy_stat:stats_index' %}">통계<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#">커뮤니티</a>
