--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 {% block extra-script %}
     <script>
         var mapOptions = {
-            center: new naver.maps.LatLng(37.3595704, 127.105399),
+            center: new naver.maps.LatLng(37.623791, 127.086100),
             zoom: 11
         };
 
