--- a/bicy_stat/templates/bicy_stat/stat_all.html
+++ b/bicy_stat/templates/bicy_stat/stat_all.html
@@ -1,35 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    stats
-{% endblock %}
+{% block title %}stats{% endblock %}
 
 {% block extra-style %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=28oedifssh"></script>
-{% endblock %}
-
-{% block current %}
-    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">CHAIN</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">홈</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'bicy_stat:stats_index' %}">통계<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">커뮤니티</a>
-                </li>
-             </ul>
-        </div>
-    </nav>
 {% endblock %}
 
 {% block content %}
@@ -39,5 +15,4 @@
     {% for stat in bicy_stats %}
 
     {% endfor %}
-
 {% endblock %}
