--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=28oedifssh"></script>
+    <style>
+        .container {
+            float: left;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
-    <div id="map" style="width:100%;height:800px;"></div>
+    <div id="map" style="width:100vw;height:100vh;"></div>
 {% endblock %}
 
 {% block extra-script %}
