공식 홈페이지 꽉 채운 화면

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
     <style>
         .container {
             float: left;
+            padding-right: 0px;
+            padding-left: 0px;
         }
     </style>
 {% endblock %}
