공식 홈페이지 홈화면 지도 꽉 찬 화면

--- a/bicy_stat/templates/bicy_stat/stat_all.html
+++ b/bicy_stat/templates/bicy_stat/stat_all.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>통계</h1>
+    <h1 class="button">통계</h1>
     <br>
 
     {% for stat in bicy_stats %}
