--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                     <a class="nav-link disabled" href="#">커뮤니티</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'official_site' %}">공식 홈페이지</a>
+                    <a class="nav-link" href="{% url 'official_site' %}">따릉이 공식 홈페이지</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'mypage' %}">마이 페이지</a>
