--- a/bicy_stat/templates/bicy_stat/stat_all.html
+++ b/bicy_stat/templates/bicy_stat/stat_all.html
@@ -13,6 +13,11 @@
     <br>
 
     {% for stat in bicy_stats %}
-
+        <div><a href="#">
+            <h2>{{ stat.title }}</h2>
+        </a>
+        </div>
+        <br>
+        <h4>{{ stat.content | linebreaksbr}}</h4>
     {% endfor %}
 {% endblock %}
