Station model community로 이동

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="{% url 'bicy_stat:stats_index' %}">통계</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">커뮤니티</a>
+                    <a class="nav-link" href="{% url 'community:index' %}">커뮤니티</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'official_site' %}">따릉이 공식 홈페이지</a>
