--- a/community/templates/community/station_detail.html
+++ b/community/templates/community/station_detail.html
@@ -7,6 +7,8 @@
 {% block content %}
     <h1>{{ station.stationName }}</h1>
     <br>
+    <h3>{{ station.parkingBikeTotCnt }}대</h3>
+    <br>
     <h2>정류소 통계 부분</h2>
     <br>
     <h2>정류소 게시글</h2>
