--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -7,9 +7,9 @@
 {% block content %}
     <div>
         <i class="fas fa-quote-left"></i>
-        <span class="h6">&ensp;Thanks for spendign your quality time with this web site today&ensp;</span>
+        <span class="h6">&ensp;이용해주셔서 감사합니다.&ensp;</span>
         <i class="fas fa-quote-right"></i>
     </div>
 
-    <p class="font-italic"><a href="{% url 'login' %}">Log in again</a></p>
+    <p class="font-italic"><a href="{% url 'login' %}">다시 로그인하기</a></p>
 {% endblock %}
