--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <h1>{{ title }}</h1>
-    <p class="font-italic">Please enter your old password for security</p>
+    <p class="font-italic">현재 비밀번호를 입력해주세요.</p>
 
      {% if form.errors %}
         <div class="alert alert-danger">
