--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
                 position: naver.maps.Position.TOP_RIGHT,
                 style: naver.maps.ZoomControlStyle.SMALL,
             },
-            mapTypeId: naver.maps.MapTypeId.NORMAL
+            mapTypeId: naver.maps.MapTypeId.NORMAL,
         };
         {#옵션 설정:https://navermaps.github.io/maps.js.ncp/docs/index.html#}
         {#옵션 설정 디테일:https://navermaps.github.io/maps.js.ncp/docs/naver.maps.html#.MapOptions#}
@@ -42,133 +42,7 @@
         {#HTML5 Geolocation API 활용하기: https://navermaps.github.io/maps.js.ncp/docs/tutorial-6-map-geolocation.example.html#}
 
         {#StyleMap 사용자 정의 컨트롤 예제: 버튼달기: StyleMap 사용자 정의 컨트롤 예제#}
-
-        var locationBtnHtml = '<div style=\'padding:10px\'><img src=\'https://bikeseoul.com/images/location_re.png\'></div>';
-
         var map = new naver.maps.Map('map', mapOptions);
-
-        var customControl = new naver.maps.CustomControl(locationBtnHtml, {
-            position: naver.maps.Position.RIGHT_CENTER
-        });
-
-        customControl.setMap(map);
-
-        var infowindow = new naver.maps.InfoWindow();
-
-        function onSuccessGeolocation(position) {
-            var location = new naver.maps.LatLng(position.coords.latitude,
-                                                 position.coords.longitude);
-
-            map.setCenter(location); // 얻은 좌표를 지도의 중심으로 설정합니다.
-            map.setZoom(10); // 지도의 줌 레벨을 변경합니다.
-
-            infowindow.setContent('<div style="padding:20px;">' + 'geolocation.getCurrentPosition() 위치' + '</div>');
-
-            infowindow.open(map, location);
-            console.log('Coordinates: ' + location.toString());
-        }
-
-        function onErrorGeolocation() {
-            var center = map.getCenter();
-
-            infowindow.setContent('<div style="padding:20px;">' +
-                '<h5 style="margin-bottom:5px;color:#f00;">Geolocation failed!</h5>'+ "latitude: "+ center.lat() +"<br />longitude: "+ center.lng() +'</div>');
-
-            infowindow.open(map, center);
-        }
-
-        $(window).on("load", function() {
-            if (navigator.geolocation) {
-                /**
-                 * navigator.geolocation 은 Chrome 50 버젼 이후로 HTTP 환경에서 사용이 Deprecate 되어 HTTPS 환경에서만 사용 가능 합니다.
-                 * http://localhost 에서는 사용이 가능하며, 테스트 목적으로, Chrome 의 바로가기를 만들어서 아래와 같이 설정하면 접속은 가능합니다.
-                 * chrome.exe --unsafely-treat-insecure-origin-as-secure="http://example.com"
-                 */
-                navigator.geolocation.getCurrentPosition(onSuccessGeolocation, onErrorGeolocation);
-            } else {
-                var center = map.getCenter();
-                infowindow.setContent('<div style="padding:20px;"><h5 style="margin-bottom:5px;color:#f00;">Geolocation not supported</h5></div>');
-                infowindow.open(map, center);
-            }
-        });
-
-        {#findLocation();#}
-
-        {#var domEventListener = naver.maps.Event.addDOMListener(customControl.getElement(), 'click', function() {#}
-        {#    findLocation("location");});#}
-
-        {#function findLocation(param) {#}
-        {#    deviceName = checkDevice();#}
-    	{#    if ( param == null && deviceName !=="" && confirm("내 위치 찾기를 하시겠습니까? \r\n 확인시 내 위치 찾기 , 취소시 미확인")) {#}
-		{#	    getUsrGpsInfo();#}
-    	{#    } else {#}
-    	{#	    onErrorGeolocation();#}
-    	{#    }#}
-        {##}
-	    {#    if ( param != null ) {#}
-	    {#	    getUsrGpsInfo();}}#}
-        {##}
-        {##}
-        {#function getUsrGpsInfo() {#}
-        {#    if ( appOsType === undefined || appOsType === "web" || appOsType === "") { //웹, 모바일웹의 경우#}
-        {#        if (navigator.geolocation) {#}
-        {#            var options = {#}
-        {#                    enableHighAccuracy : true,#}
-        {#                    timeout : 10000,#}
-        {#                    //timeout : 100,#}
-        {#                    maximumAge : 6000#}
-        {#                };#}
-        {##}
-        {#                navigator.geolocation.getCurrentPosition(onSuccessGeolocation, onErrorGeolocation, options);#}
-                        {#if ( realStationList == null || realStationList.length == 0 ) {#}
-                        {#    navigator.geolocation.getCurrentPosition(onSuccessGeolocation, onErrorGeolocation, options);} else {#}
-                        {#    navigator.geolocation.getCurrentPosition(onSuccessGeolocation1, onErrorGeolocation1, options);}#}
-        {##}
-        {#            } else {#}
-        {#                alert("이 브라우저는 Geolocation를 지원하지 않습니다.");#}
-        {#                location.replace(returnSta.replaceUrl);}#}
-        {##}
-        {#    } else { //앱으로 접속할 경우#}
-        {#        if (appOsType === 'android' || appOsType === "Android") {#}
-        {#            window.android.gpsStart();#}
-        {#        }#}
-        {#        if (appOsType === 'iPhone' || appOsType === "iPad" || appOsType === 'ios') {#}
-        {#            window.location = 'toApp://?{"call":"gpsStart"}';#}
-        {#        }#}
-        {##}
-        {#        // 2019.02.20#}
-        {#        if (navigator.geolocation) {#}
-        {#            navigator.geolocation.getCurrentPosition(onSuccessGeolocation, onErrorGeolocation);#}
-        {#        } else {#}
-        {#            onErrorGeolocation();}}};#}
-        {##}
-        {#var appOsType = '';#}
-        {##}
-        {#function onErrorGeolocation() {#}
-        {#    nMap.searchCoordinateToAddress(new naver.maps.LatLng(nMap.defaultLatitude , nMap.defaultLongitude));}#}
-        {##}
-        {##}
-        {##}
-        {#// 기존 위치 정보 찾은 경우는 조회 안함#}
-        {#function onSuccessGeolocation1(position) {#}
-        {#    nMap.map.setCenter(  new naver.maps.LatLng( position.coords.latitude, position.coords.longitude )  );#}
-        {#    nMap.updateMarkers();}#}
-        {##}
-        {#// 기존 위치 정보 찾은 경우는 조회 안함#}
-        {#function onErrorGeolocation1() {#}
-        {#    this.alert("위치정보 실패하였습니다.");}#}
-        {##}
-        {#function checkDevice() {#}
-        {#    //디바이스 체크 fnc#}
-        {#    var mobileKeyWords = new Array('iPhone','iPad', 'BlackBerry', 'Android', 'Windows CE', 'LG', 'MOT', 'SAMSUNG', 'SonyEricsson');#}
-        {#    var deviceName = "";#}
-        {#    for (var word in mobileKeyWords){#}
-        {#        if (navigator.userAgent.match(mobileKeyWords[word]) != null){#}
-        {#            deviceName = mobileKeyWords[word];#}
-        {#            break;}}#}
-        {#    return deviceName;};#}
-
-
     </script>
 {% endblock %}
 
